--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <title>Kunle Falayi's Classwork Site</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="CSS/style.css">
     </head>
     <body>
         <div class="header">
@@ -17,9 +17,10 @@
         </div>
         <hr>
         <div id="about">
-            <p>Hi, I'm Kunle.</p>
-            <p>💼 I'm a Data Journalism student at the <a href="https://journalism.columbia.edu/" target="_blank">Columbia Journalism School.</a></p> 
-            <p>🧑🏾‍💻 Learning data analysis, mapping, visualization, scraping and some awesome coding.</p>
+            <h3>About me</h3>
+            <p>Hi, I'm Kunle! 
+            💼 I'm a Data Journalism student at the <a href="https://journalism.columbia.edu/" target="_blank">Columbia Journalism School.</a> 
+            🧑🏾‍💻 Learning data analysis, mapping, visualization, scraping and some awesome coding.</p>
         </div>
         <hr>
         <div id="assignments">
