--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
         </div>
         <hr>
         <div id="assignments">
-            <li>
-                <h3><a href="electionResult/index.html" target="_blank">Mapping the 2016 presidential election results</a></h3>
-                <img src="images/map.png" alt="A heat map of the US"></img>
-                <p>This classwork entails mapping the 2016 election with the use of Mapbox GL JS and writing the HTML, CSS and Javascript 
-                    code from scratch to produce a choropleth map and a graduated point map.
-                </p>
-            </li>
+            <div id=story-card>
+                <li>
+                    <h3><a href="electionResult/index.html" target="_blank">Mapping the 2016 presidential election results</a></h3>
+                    <img src="images/map.png" alt="A heat map of the US"></img>
+                    <p>This classwork entails mapping the 2016 election with the use of Mapbox GL JS and writing the HTML, CSS and Javascript 
+                        code from scratch to produce a choropleth map and a graduated point map.
+                    </p>
+                
+                </li>
+            </div>
         </div>
     </body>
 </html>
