--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="CSS/style.css">
+
     </head>
     <body>
         <div class="header">
-            <h1>Kunle Falayi's Classwork</h1>
-            <p>All assignments and classworks for mapping class</p>
+            <h1>Kunle Falayi's Mapping Work</h1>
+            <h3 style="text-align:center">All assignments and classworks for mapping class</h3>
         </div>
         <hr>
         <div id="about">
@@ -24,7 +25,21 @@
         </div>
         <hr>
         <div id="assignments">
-
+            <div id=story-card>
+                <li>
+                    <h3><a href="electionResult/index.html" target="_blank">Mapping the 2016 presidential election results</a></h3>
+                    <img src="images/map.png" alt="A heat map of the US"></img>
+                    <p>This classwork entails mapping the 2016 election with the use of Mapbox GL JS and writing the HTML, CSS and Javascript 
+                        code from scratch to produce a choropleth map and a graduated point map.
+                    </p>
+                
+                </li>
+            </div>
         </div>
     </body>
+    <footer>
+        <p>Find all data analyses on the maps on this website <a href="https://github.com/kfalayi/mapping-data" target="_blank">here</a></p>
+        <p>Author: Kunle Falayi</p>
+        <p><a href="mailto:oaf2125@columbia.edu">oaf2125@columbia.edu</a></p>
+    </footer>
 </html>
