--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
                     <p>This classwork entails mapping the 2016 election with the use of Mapbox GL JS and writing the HTML, CSS and Javascript 
                         code from scratch to produce a choropleth map and a graduated point map.
                     </p>
-                
+                </li>
+                <li>
+                    <h3><a href="brutality-typology/index.html" target="_blank">Mapping county typology and police brutality</a></h3>
+                    <img src="images/typology.png" alt="A heat map of the US"></img>
+                    <p>There are two maps on this page. The first is an interactive typology map of US counties while the second is a simple 
+                        and also interactive map which shows reported police brutality during the George Floyd protests. These were fully coded
+                        using Mapbox, Javascript, CSS and HTML.
+                    </p>
                 </li>
             </div>
         </div>
