--- a/brutality-typology/index.html
+++ b/brutality-typology/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Interactive map of county typology and police brutality </h1>
+    <h1>Interactive maps of county typology and police brutality </h1>
     By <a href="https://kfalayi.github.io/" target="_blank">Kunle Falayi</a>
     <div id='map'></div>
     <p>The typology codes provided by the <a href="https://www.ers.usda.gov/data-products/county-typology-codes.aspx" target="_blank">USDA</a> 
