--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 <li>
                     <h3><a href="brutality-typology/index.html" target="_blank">Mapping county typology and police brutality</a></h3>
                     <img src="images/typology.png" alt="A heat map of the US"></img>
-                    <p>There are two maps on this page. The first is an interactive typology map of US counties while the second is a simple 
-                        and also interactive map which shows reported police brutality during the George Floyd protests. These were fully coded
-                        using Mapbox, Javascript, CSS and HTML.
+                    <p>The page contains an interactive typology map of US counties and a simple 
+                    also interactive point map showing reported police brutality incidents during the George Floyd protests. Coded
+                    using Mapbox, Javascript, CSS and HTML.
                     </p>
                 </li>
             </div>
