--- a/brutality-typology/index.html
+++ b/brutality-typology/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <div id='map2'></div>
-    <p>The murder of George Floyd was murdered by police officer Derek Chauvin in Minneapolis on May 25, 2020 
+    <p>The murder of George Floyd by police officer Derek Chauvin in Minneapolis on May 25, 2020 
         sparked a wave of protests across the nation.
     <p>However, as the protests spread due to citizen's outrage, confrontations between police and protesters escalated.
     <p>This <a href="https://github.com/2020PB/police-brutality" target="_blank">data of reported police brutality</a> during the protests
