--- a/brutality-typology/index.html
+++ b/brutality-typology/index.html
@@ -46,7 +46,7 @@
             <hr>
             <!-- <div id="typology-legend" class="legend"> -->
             <div id='typology-legend' class="legend2">
-                <p><em>Zoom in for to see more dots, precise location of incidents</em></p>
+                <p><em>Zoom in to see more dots, precise location of incidents</em></p>
                 <div><span style="background-color: #1dab32"></span>1 incident</div>
             </div>
         </div>
