--- a/citibike/index.html
+++ b/citibike/index.html
@@ -13,7 +13,7 @@
     <h1>Where Citibike rides started and ended in Sep 2020 & 2021</h1>
     <p>By <a href="https://kfalayi.github.io/" target="_blank">Kunle Falayi</a></p>
    
-    <p>This maps represents the origin and termination points of all Citibike trips in New York City in the month of September for 
+    <p>These maps represents the origin and termination points of all Citibike trips in New York City in the month of September for 
         2020 and 2021. The maps on the left are start trips while the ones on the left are end trips</p>
     <p><em>Zoom in to see precise location. Click dot to see location name and number of trips registered</em></p>
     <div><span style="background-color: #dd31f7"></span>= 1 station</div>
