--- a/citibike/index.html
+++ b/citibike/index.html
@@ -15,17 +15,31 @@
    
     <p>These maps represents the origin and termination points of all Citibike trips in New York City in the month of September for 
         2020 and 2021. The maps on the left are start trips while the ones on the left are end trips</p>
-    <p><em>Zoom in to see precise location. Click dot to see location name and number of trips registered</em></p>
-    <div><span style="background-color: #dd31f7"></span>= 1 station</div>
     <div class="column-container">
         <div id='map'></div>
+        <div id='title' class="title">
+            <h3>Where rides started in Sep 2020</h1>
+            <hr>
+            <!-- <div id="typology-legend" class="legend"> -->
+            <p><em>Zoom in to see more dots, precise location of incidents</em></p>
+            <br>
+            <div><span style="background-color: #dd31f7"></span>1 station</div>
+        </div>
         <div id='map2'></div>
+        <div id='title' class="title2">
+            <h3>Where rides ended</h3>
+        </div>
     </div>
     
     <div class="column-container">
         <div id='map3'></div>
+        <div id='title' class="title3">
+            <h3>Where rides started in Sep 2021</h3>
+        </div>
         <div id='map4'></div>
-    </div>
+        <div id='title' class="title4">
+            <h3>Where rides ended</h3>
+        </div>
 
     <script type='text/javascript' src="map.js"></script>
     
