--- a/citibike/index.html
+++ b/citibike/index.html
@@ -18,29 +18,32 @@
     <div class="column-container">
         <div id='map'></div>
         <div id='title' class="title">
-            <h3>Where rides started in Sep 2020</h1>
+            <h2>1. Where rides started in Sep 2020</h2>
             <hr>
+            <p style="font-size: 14px">2. Where rides ended in Sep 2020</p>
+            <p style="font-size: 14px">3. Where rides started in Sep 2021</p>
+            <p style="font-size: 14px">4. Where rides ended in Sep 2021</p>
             <!-- <div id="typology-legend" class="legend"> -->
-            <p><em>Zoom in to see more dots, precise location of incidents</em></p>
-            <br>
-            <div><span style="background-color: #dd31f7"></span>1 station</div>
+            <p><em>Zoom in to see precise location of stations, details</em></p>
+            <div><span id="first" style="background-color: #dd31f7"></span>1 station, 10 trips</div>
+            <div><span id="second" style="background-color: #dd31f7"></span>14k trips</div>
+        </div>
+        <div id='title' class="title2">
+            <h2>2.</h2>
         </div>
         <div id='map2'></div>
-        <div id='title' class="title2">
-            <h3>Where rides ended</h3>
-        </div>
     </div>
     
     <div class="column-container">
-        <div id='map3'></div>
         <div id='title' class="title3">
-            <h3>Where rides started in Sep 2021</h3>
+            <h2>3.</h2>
+        </div>
+        <div id='map3'></div>
+        <div id='title' class="title4">
+            <h2>4.</h2>
         </div>
         <div id='map4'></div>
-        <div id='title' class="title4">
-            <h3>Where rides ended</h3>
-        </div>
-
+    </div>
     <script type='text/javascript' src="map.js"></script>
     
 </body>
