--- a/citibike/index.html
+++ b/citibike/index.html
@@ -24,7 +24,7 @@
             <p style="font-size: 14px">3. Where rides started in Sep 2021</p>
             <p style="font-size: 14px">4. Where rides ended in Sep 2021</p>
             <!-- <div id="typology-legend" class="legend"> -->
-            <p><em>Zoom in to see precise location of stations, details</em></p>
+            <p><em>Zoom in and click for details</em></p>
             <div><span id="first" style="background-color: #dd31f7"></span>1 station, 10 trips</div>
             <div><span id="second" style="background-color: #dd31f7"></span>14k trips</div>
         </div>
