--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="assignments">
             <div id=story-card>
                 <li>
-                    <h3><a href="electionResult/index.html" target="_blank">Mapping the 2020 presidential election results</a></h3>
+                    <h3><a href="electionResult/index.html" target="_blank">2020 presidential election results in maps</a></h3>
                     <img src="images/map.png" alt="A heat map of the US"></img>
                     <p>This classwork entails mapping the 2020 election with the use of Mapbox GL JS and writing the HTML, CSS and Javascript 
                         code from scratch to produce a choropleth map and a graduated point map.
