--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
                 <li>
                     <h3><a href="brutality-typology/index.html" target="_blank">Mapping county typology and police brutality</a></h3>
                     <img src="images/typology.png" alt="A heat map of the US"></img>
-                    <p>The page contains an interactive typology map of US counties and a simple 
-                    also interactive point map of reported police brutality incidents during the George Floyd protests. Coded
-                    using Mapbox, Javascript, CSS and HTML.
+                    <p>This page contains an interactive typology map of US counties and a simple also interactive point map of reported police brutality
+                        incidents during the George Floyd protests. Coded using Mapbox, Javascript, CSS and HTML.
                     </p>
                 </li>
             </div>
