--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
             🧑🏾‍💻 Learning data analysis, mapping, visualization, scraping and some awesome coding.</p>
         </div>
         <hr>
-        <div id="assignments">
             <div id=story-card>
+                <li>
+                    <h3><a href="citibike/index.html" target="_blank">Where Citibike rides started and ended in Sep 2020 & 2021</a></h3>
+                    <img src="/images/citibike.jpeg" alt="A bubble map of NYC with a popup showing the name of a bike station and number of rides."></img>
+                    <p>In this mapping classwork, I downloaded citibike datasets from citibikenyc, styled a Mapbox template and used Javascript, CSS and HTML to code 
+                        the location of stations which registered the start and arrival of citibike rides in Sep 2020 and Sep 2021.
+                    </p>
+                </li>
                  <li>
                     <h3><a href="citibike/index.html" target="_blank">Where Citibike rides started and ended in Sep 2020 & 2021</a></h3>
                     <img src="/images/citibike.jpeg" alt="A bubble map of NYC with a popup showing the name of a bike station and number of rides."></img>
@@ -49,7 +55,6 @@
                 </li>
             </div>
             <br>
-        </div>
     </body>
     <hr>
     <footer>
