--- a/brutality-typology/index.html
+++ b/brutality-typology/index.html
@@ -34,15 +34,16 @@
         </div>
     </div>
 
+    <h2>Police brutality during George Floyd protests</h2>
     <div id='map2'></div>
     <p>The murder of George Floyd by police officer Derek Chauvin in Minneapolis on May 25, 2020 
         sparked a wave of protests across the nation.
     <p>However, as the protests spread due to citizen's outrage, confrontations between police and protesters escalated.
     <p>This <a href="https://github.com/2020PB/police-brutality" target="_blank">data of reported police brutality</a> during the protests
         was collated for the use of the public, journalists and activists. </p>
+        
         <div id='title' class="title2">
-            <h1>Police brutality during George Floyd protests</h1>
-            <p>Confrontations between protesters and police spiked during the protests, so did police brutality</p>
+            <h3>Confrontations between protesters and police spiked during the protests, so did police brutality</h3>
             <hr>
             <!-- <div id="typology-legend" class="legend"> -->
             <div id='typology-legend' class="legend2">
