--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
         <hr>
             <div id=story-card>
                  <li>
-                    <h3><a href="citibike/index.html" target="_blank">Where Citibike rides started and ended in Sep 2020 & 2021</a></h3>
+                    <h3><a href="https://kfalayi.github.io/citibike" target="_blank">Where Citibike rides started and ended in Sep 2020 & 2021</a></h3>
                     <img src="/images/citibike.jpeg" alt="A bubble map of NYC with a popup showing the name of a bike station and number of rides."></img>
                     <p>In this mapping classwork, I downloaded citibike datasets from citibikenyc, styled a Mapbox template and used Javascript, CSS and HTML to code 
                         the location of stations which registered the start and arrival of citibike rides in Sep 2020 and Sep 2021.
                     </p>
                 </li>
                 <li>
-                    <h3><a href="brutality-typology/index.html" target="_blank">Mapping county typology and police brutality</a></h3>
+                    <h3><a href="https://kfalayi.github.io/brutality-typology" target="_blank">Mapping county typology and police brutality</a></h3>
                     <img src="images/typology.png" alt="A heat map of the US"></img>
                     <p>An interactive typology map of US counties and a simple also interactive point map of reported police brutality
                         incidents during the George Floyd protests. Made and coded with Mapbox, Javascript, CSS and HTML.
                     </p>
                 </li>
                 <li>
-                    <h3><a href="electionResult/index.html" target="_blank">2020 presidential election results in maps</a></h3>
+                    <h3><a href="https://kfalayi.github.io/electionResult" target="_blank">2020 presidential election results in maps</a></h3>
                     <img src="images/map.png" alt="A heat map of the US"></img>
                     <p>This classwork entails mapping the 2020 election result with the use of Mapbox GL JS and writing the HTML, CSS and Javascript 
                         code from scratch to produce a choropleth map and a graduated point map.
