--- a/index.html
+++ b/index.html
@@ -25,8 +25,15 @@
         </div>
         <hr>
             <div id=story-card>
+                <li>
+                    <h3><a href="https://kfalayi.github.io/gas-flaring" target="_blank">US leads post-COVID reduction in gas flaring</a></h3>
+                    <img src="/images/citibike.jpeg" alt="A bubble map of NYC with a popup showing the name of a bike station and number of rides."></img>
+                    <p>World Bank's 2022 Global Gas Flaring data shows that the U.S., one of the top contributors to gas flaring among oil producing nations of the world, reduced its gas flaring by more than 3 billion cubic 
+                        meters in 2021 after flaring almost 12 billion cubic meters of gas in the first COVID year 2020.
+                    </p>
+                </li>
                  <li>
-                    <h3><a href="https://kfalayi.github.io/citibike" target="_blank">Where Citibike rides started and ended in Sep 2020 & 2021</a></h3>
+                    <h3><a href="https://kfalayi.github.io/citibike" target="_blank">US leads post-COVID reduction in gas flaring</a></h3>
                     <img src="/images/citibike.jpeg" alt="A bubble map of NYC with a popup showing the name of a bike station and number of rides."></img>
                     <p>In this mapping classwork, I downloaded citibike datasets from citibikenyc, styled a Mapbox template and used Javascript, CSS and HTML to code 
                         the location of stations which registered the start and arrival of citibike rides in Sep 2020 and Sep 2021.
