--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div id=story-card>
                  <li>
                     <h3><a href="https://kfalayi.github.io/gas-flaring" target="_blank">US leads post-COVID reduction in gas flaring</a></h3>
-                    <img src="/images/gas-flaring-map" alt="A choropleth map of gas flaring levels per country."></img>
+                    <img src="/images/gas-flaring-map.png" alt="A choropleth map of gas flaring levels per country."></img>
                     <p>World Bank's 2022 Global Gas Flaring data shows that the U.S., one of the top contributors to gas flaring among oil producing nations of the world, reduced its gas flaring by over 3 billion cubic 
                         meters in 2021. I coded this map with Mapbox, Javascript and HTML and I experimented with the winkelTripel projection.
                     </p>
