--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
         <hr>
         <div id="assignments">
             <div id=story-card>
+                  <li>
+                    <h3><a href="https://kfalayi.github.io/us-wildfire-risks" target="_blank">Buying a home in California? Maybe check this wildfire risk assessment first</a></h3>
+                    <img src="/images/wildfire.png" alt="A choropleth map of California showing shades of orange to show fire risks."></img>
+                    <p>Wildfire risks are important concerns when buying homes. For prospective homebuyers and realtors, the USDA wildfire risks dataset is a great resource in 
+                        determining how much risks a homeowner may face in any county. These interactive maps were made and coded using Mapbox, HTML, CSS, Javascript. Analysis 
+                        done with Python with Altair library for preliminary mapping and analysis.
+                    </p>
+                </li>
                  <li>
                     <h3><a href="https://kfalayi.github.io/gas-flaring" target="_blank">US leads post-COVID reduction in gas flaring</a></h3>
                     <img src="/images/gas-flaring-map.png" alt="A choropleth map of gas flaring levels per country."></img>
