--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <hr>
             <div id=story-card>
                  <li>
-                    <h3><a href="https://kfalayi.github.io/us-wildfire-risks" target="_blank">Buying a home in California? Maybe check this wildfire risk assessment first</a></h3>
+                    <h3><a href="https://kfalayi.github.io/us-wildfire-risks">Buying a home in California? Maybe check this wildfire risk assessment first</a></h3>
                     <img src="/images/wildfire.png" alt="A choropleth map of California showing shades of orange to show fire risks."></img>
                     <p>Wildfire risks are important concerns when buying homes. For prospective homebuyers and realtors, the USDA wildfire risks dataset is a great resource in 
                         determining how much risks a homeowner may face in any county. These interactive maps were made and coded using Mapbox, HTML, CSS, Javascript. Analysis 
@@ -34,28 +34,28 @@
                     </p>
                 </li>
                 <li>
-                    <h3><a href="https://kfalayi.github.io/gas-flaring" target="_blank">US leads post-COVID reduction in gas flaring</a></h3>
+                    <h3><a href="https://kfalayi.github.io/gas-flaring">US leads post-COVID reduction in gas flaring</a></h3>
                     <img src="/images/gas-flaring-map.png" alt="A choropleth map of gas flaring levels per country."></img>
                     <p>World Bank's 2022 Global Gas Flaring data shows that the U.S., one of the top contributors to gas flaring among oil producing nations of the world, reduced its gas flaring by over 3 billion cubic 
                         meters in 2021. I coded this map with Mapbox, Javascript and HTML and I experimented with the winkelTripel projection.
                     </p>
                 </li>
                  <li>
-                    <h3><a href="https://kfalayi.github.io/citibike" target="_blank">US leads post-COVID reduction in gas flaring</a></h3>
+                    <h3><a href="https://kfalayi.github.io/citibike">US leads post-COVID reduction in gas flaring</a></h3>
                     <img src="/images/citibike.jpeg" alt="A bubble map of NYC with a popup showing the name of a bike station and number of rides."></img>
                     <p>In this mapping classwork, I downloaded citibike datasets from citibikenyc, styled a Mapbox template and used Javascript, CSS and HTML to code 
                         the location of stations which registered the start and arrival of citibike rides in Sep 2020 and Sep 2021.
                     </p>
                 </li>
                 <li>
-                    <h3><a href="https://kfalayi.github.io/brutality-typology" target="_blank">Mapping county typology and police brutality</a></h3>
+                    <h3><a href="https://kfalayi.github.io/brutality-typology">Mapping county typology and police brutality</a></h3>
                     <img src="images/typology.png" alt="A heat map of the US"></img>
                     <p>An interactive typology map of US counties and a simple also interactive point map of reported police brutality
                         incidents during the George Floyd protests. Made and coded with Mapbox, Javascript, CSS and HTML.
                     </p>
                 </li>
                 <li>
-                    <h3><a href="https://kfalayi.github.io/electionResult" target="_blank">2020 presidential election results in maps</a></h3>
+                    <h3><a href="https://kfalayi.github.io/electionResult">2020 presidential election results in maps</a></h3>
                     <img src="images/map.png" alt="A heat map of the US"></img>
                     <p>This classwork entails mapping the 2020 election result with the use of Mapbox GL JS and writing the HTML, CSS and Javascript 
                         code from scratch to produce a choropleth map and a graduated point map.
