--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="assignments">
             <div id=story-card>
                   <li>
-                    <h3><a href="https://kfalayi.github.io/us-wildfire-risks">Buying a home in California? Maybe check this wildfire risk assessment first</a></h3>
+                    <h3><a href="https://kfalayi.github.io/us-wildfire">Buying a home in California? Maybe check this wildfire risk assessment first</a></h3>
                     <img src="/images/wildfire.png" alt="A choropleth map of California showing shades of orange to show fire risks."></img>
                     <p>Wildfire risks are important concerns when buying homes. For prospective homebuyers and realtors, the USDA wildfire risks dataset is a great resource in 
                         determining how much risks a homeowner may face in any county. These interactive maps were made and coded using Mapbox, HTML, CSS, Javascript. Analysis 
